--- a/facewash.css
+++ b/facewash.css
@@ -23,6 +23,9 @@
 }
 #Filter,#Sort{
     width: 200px;
+    /* border: 2px solid red ; */
+    height: 25px;
+    border-radius: 5px;
 }
 .card-list{
     width:70%;
@@ -56,7 +59,20 @@
     background: rgb(79, 79, 79);
 }
 #search_box_{
-    width: 250px;
-    height: 20px;
-    border-radius: 10px;
+    width: 200px;
+    /* border: 2px solid red ; */
+    height: 25px;
+    border-radius: 5px;
+    
 }
+
+
+/* don't touch */
+
+.banner{
+    width: 100%;
+    height: 400px;
+    margin: auto;
+    /* border: 2px solid red; */
+}
+ 
