--- a/lower_half.css
+++ b/lower_half.css
@@ -5,6 +5,15 @@
 
 /* -----Main Content------ */
 
+
+@media only screen and (max-width: 600px) and (min-width: 400px)  {
+    
+   
+}
+
+
+/* -----Main Content------ */
+
 #main_content_area{
     width: 100%;
     height: auto;
