--- a/CSS/home.css
+++ b/CSS/home.css
@@ -111,11 +111,12 @@ p:hover{
 	color: #F50057;
 }
 
-#head{
+/* #head{
 	font-size: 16px;
 	font-weight: 600;
 
-}
+} */
+/*   om */
 
 
 
@@ -297,8 +298,8 @@ position:absolute;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0,0,0); /* Fallback color  */
+   background-color: rgba(0,0,0,0.4); /*Black w/ opacity */
 }
 
 /* Modal Content/Box */
@@ -354,6 +355,10 @@ input{
 	border-color: pink;
 }
 
+/* sub section*/
+/* #sub{
+	background-color: #C51162;
+} */
 
 /*bannner------------------------------------------------------------------------------------*/
 #banner img {
@@ -371,6 +376,10 @@ input{
 	width: 80%;
 	
 } */
+
+#content{
+	background-color: #E91E63;
+}
 
 
 
